# stream-notifier

./: CMakeLists.txt  README.md
src/: daemon.c  strings.c  strings.h
